# path_server

./: CMakeLists.txt  README.md  package.xml  plugins.xml
design/: path_server_overhaul-design.md
include/path_server/: bezier_interpolation.hpp  logging.hpp  path_data.hpp  path_data_extd.hpp  path_property.hpp  path_server.hpp  path_server_node.hpp  path_server_node_ros1.hpp  path_utils.hpp  type_map.hpp  utm_ll_conversions.h
include/path_server/path_properties/: active_segment.hpp  curvature.hpp  curve_length.hpp  lateral_offset.hpp  nop.hpp
launch/: path_server.launch.py
msg/: PathOffsetCommand.msg
src/: bezier_interpolation.cpp  path_data_extd.cpp  path_manipulation.cpp  path_server.cpp  path_server_node.cpp  path_server_node_ros1.cpp  path_server_utils.cpp
src/path_properties/: active_segment.cpp  curvature.cpp  curve_length.cpp  lateral_offset.cpp  nop.cpp
